--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,10 +7,11 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=c++17",
                 "${file}",
                 "-o",
                 "${fileDirname}/build/${fileBasenameNoExtension}.o",
-                "--std=c++11",
+                "--std=c++17",
             ],
             "options": {
                 "cwd": "${fileDirname}"
