--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,18 @@
 {
-    "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug",
-            "type": "lldb",
-            "request": "launch",
-            "program": "${fileDirname}/build/${fileBasenameNoExtension}.o",
-            "args": [
-                "Hello",
-                "World"
-            ],
-            "cwd": "${fileDirname}/",
-            "preLaunchTask": "C/C++: g++ build active file"
-        },
-        {
-            "name": "C/C++: g++ build and debug active file",
+            "name": "C/C++: clang++ build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/build/${fileBasenameNoExtension}.o",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.o",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
-            "externalConsole": false,
+            "externalConsole": true,
             "MIMode": "lldb",
-            "preLaunchTask": "C/C++: g++ build active file"
+            "preLaunchTask": "C/C++: clang++ build active file"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
